25-Jun-2015 Laurent Duflot
	* ZeroLeptonCRWT, ZeroLeptonCRZ, ZeroLeptonCRY: add RJigsaw block
	* BuildSUSYObjects: update list of triggers
	* update to SUSYTools-00-06-10
	* tagged as ZeroLeptonRun2-00-00-39

25-Jun-2015 Laurent Duflot
	* ZeroLeptonCRWT, ZeroLeptonCRZ: for Run 2 data, set both
	isMuonChannel and isElectronChannel to true since trigger cannot
	be decided from stream

24-Jun-2015 Laurent Duflot
	* BuildSUSYObjects: fix jet btagging bug (cut value was for a previous
	tagger)
	* PhysObjProxyUtils.cxx: fill jetBTag variable with the MV2c20
	discriminant value

23-Jun-2015 Laurent Duflot
	* README: update file for example command
	* launch_jobs_on_grid.py: include Ext_RestFrames tarball

22-Jun-2015 Laurent Duflot
	* ZeroLeptonNtVars, PhysObjProxyUtils, SR and CR: add lumi block number,
	remove BCH_CORR_CELL and experimental met definitions:
	metNOCHCORRCELL, metLHTOPO, metLHTOPONOCHCORRCELL
	*  ZeroLeptonNtVars, PhysObjProxyUtils, FilterUpdateMerge, ZeroLeptonSR:
	add RJigsaw variables

12-Jun-2015 Laurent Duflot
	* MCInfoProcessor, config files: change TruthParticleContainer key for mc15
	* launch_jobs_on_grid.py: bug fix for derivation detection. Signal
	patterns for mc15.

11-Jun-2015 Geraldine Conti
	* Commented out the cleaning cuts for the truth analysis in CRY, CRWT ad CRZ

10-Jun-2015 Laurent Duflot
	* JobBookKeeping, config files: use metadata information for derivations
	* BuildSUSYObjects: add trigger bits (list to be revised)

09-Jun-2015 Laurent Duflot
	* FilterUpdateMerge.py: update for Run 2 stream; few protections added
	* launch_jobs_on_grid.py: add --noGRL option, add p2363 support,
	further reduction of the output dataset length
	* FilterUpdateMerge.cxx: add mc15 JZxW samples
	* FilterUpdateMerge.py, getMCInfo.py, makeDatasetList.py, mc15_13TeV_week1_MCSampleList.py: add support for mc15
	"week1" samples

08-Jun-2015 Laurent Duflot
	* launch_jobs_on_grid.py: add p2363

08-Jun-2015 Laurent Duflot